--- a/Modular Code Sample 08202019.ipynb
+++ b/Modular Code Sample 08202019.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sample: VN Customer Lapse Model"
+    "# Sample:  Model"
    ]
   },
   {
@@ -436,211 +436,4 @@
     "    \n",
     "    return deciles"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Apply Functions to Projects"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c_lapse = get_data(\"C:/Users/martken/Documents/VN Lapse Data/lapse_modular_sample.sas7bdat\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Prepare Input data\n",
-    "\n",
-    "#Columns to drop\n",
-    "\n",
-    "remove_list = ['cli_num' , \n",
-    "        'po_num' , \n",
-    "        'pol_num',\n",
-    "        'po1', \n",
-    "        'po2', \n",
-    "        'other_lapse',\n",
-    "        'issue_cohort',\n",
-    "        'po_tenure_acc', \n",
-    "        'po_tenure_ci',\n",
-    "        'po_tenure_inv',\n",
-    "        'orphan_status',\n",
-    "        'po_tenure_lp', \n",
-    "        'digital_focus_ind',\n",
-    "        'g_agt_stat_cd',\n",
-    "        'srv_agt_ten_ass',\n",
-    "        'clm_cws_ind',\n",
-    "        'clm_ezc_ind',\n",
-    "        'pmt_onl_ind',\n",
-    "        'po_tenure_lts',\n",
-    "        'po_tenure_med', \n",
-    "        'orph_cli',\n",
-    "        'mth_15']\n",
-    "\n",
-    "feature_data , target =data_preparation(c_lapse, 'cli_num', remove_list , target ='f_ever_lapse15')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train, x_test, y_train, y_test = data_partition(feature_data , target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\martken\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "C:\\Users\\martken\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3163: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._where(-key, value, inplace=True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "x_train, shortlist = feature_generation(x_train, y_train, 0.9)\n",
-    "x_test = x_test[shortlist]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fit time: 0.026000261306762695\n",
-      "model score: 0.863\n",
-      "Fit time: 2.3919999599456787\n",
-      "model score: 0.863\n",
-      "Fit time: 2.6760001182556152\n",
-      "model score: 0.850\n",
-      "Fit time: 9.424999952316284\n",
-      "model score: 0.814\n"
-     ]
-    }
-   ],
-   "source": [
-    "pipelines = model_selection(x_train, y_train, x_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ROC': 0.7229166666666667, 'Precision': 0.8484848484848485, 'Recall': 0.4666666666666667}\n",
-      "[0.0270949 0.0339419 0.0411623 0.0544696 0.0794567 0.1010139 0.137437\n",
-      " 0.1973212 0.3045569 0.6198479]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Use LGBM as Final Model\n",
-    "\n",
-    "clf = LGBMClassifier(random_state=42)\n",
-    "model, pred_grp, pred_prob, p_cutoff, metrics= model_fit(x_train ,y_train, x_test, y_test)\n",
-    "print(metrics)\n",
-    "print(p_cutoff)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Load Model\n",
-    "\n",
-    "labeled_test, pred_test = model_prediction(x_test, y_test, fitted_model = \"lapse_model_mod.p\" )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       f_ever_lapse15 nonresp\n",
-      "                  sum     sum\n",
-      "decile                       \n",
-      "1                26.0     2.0\n",
-      "2                 6.0    15.0\n",
-      "3                 4.0    29.0\n",
-      "4                 6.0    32.0\n",
-      "5                 9.0    29.0\n",
-      "6                 7.0    22.0\n",
-      "7                 0.0    24.0\n",
-      "8                 0.0    25.0\n",
-      "9                 0.0    24.0\n",
-      "10                2.0    38.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "decile_rep = generate_report(labeled_test, y='f_ever_lapse15')\n",
-    "print(decile_rep)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
-}
